--- a/chama/team.html
+++ b/chama/team.html
@@ -103,13 +103,13 @@
     <div class="container-fluid page-header py-6 my-6 mt-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
             <h1 class="display-4 text-white animated slideInDown mb-4">Our Team</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
+           <!--  <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Our Team</li>
                 </ol>
-            </nav>
+            </nav> -->
         </div>
     </div>
     <!-- Page Header End -->
