--- a/chama/deposit.html
+++ b/chama/deposit.html
@@ -212,7 +212,7 @@
   display: grid;
   grid-template-rows: 1fr 1fr;
   background-color:white;
-  width: 300px;
+  width: 350px;
   height: 220px;
   border-radius: 1px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -224,7 +224,7 @@
   background-color: #1B6B93;
   display: flex;
   align-items: center;
-  padding: 10px;
+ height: 110px;
 }
 
 .card1 .profile-section .user-profile img {
@@ -249,7 +249,7 @@
   background-color: white;
   border: none;
   padding: 10px;
-  border-radius: 8px;
+  border-radius: 1px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: box-shadow 0.3s;
@@ -268,7 +268,7 @@
 
 .card2 {
   background-color: #001C30;
-  width: 200px;
+  width: 220px;
   height: 95px;
   border-radius: 1px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -314,7 +314,7 @@
 
 .card3 {
   background-color:#6554AF;
-  width: 200px;
+  width: 220px;
   height: 95px;
   border-radius: 1px;
   box-shadow: 0 2px 4px rgba(73, 54, 54, 0.1);
@@ -359,7 +359,7 @@
 /*card 4*/
 .card4 {
   background-color:#FFC95F;
-  width: 200px;
+  width: 220px;
   height: 95px;
   border-radius: 1px;
   box-shadow: 0 2px 4px rgba(202, 191, 191, 0.1);
@@ -404,7 +404,7 @@
 /*card 5*/
 .card5 {
 background-color:#2CD3E1;
-width: 200px;
+width: 220px;
 height: 95px;
 border-radius: 1px;
 box-shadow: 0 2px 4px rgba(202, 191, 191, 0.1);
@@ -450,7 +450,7 @@ font-size: 14px;
 
 .card6 {
 background-color:#05BFDB;
-width: 200px;
+width: 220px;
 height: 95px;
 border-radius: 1px;
 box-shadow: 0 2px 4px rgba(202, 191, 191, 0.1);
@@ -495,7 +495,7 @@ font-size: 14px;
 /*card7 */
 .card7 {
 background-color:#D864A9;
-width: 200px;
+width: 220px;
 height: 95px;
 border-radius: 1px;
 box-shadow: 0 2px 4px rgba(202, 191, 191, 0.1);
@@ -629,8 +629,8 @@ grid-template-columns: 1fr 1fr 1fr;
         <div class="user-name">John Doe</div>
       </div>
       <ul>
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Feedback</a></li>
+        <li><a href="deposit.html">Dashboard</a></li>
+        <li><a href="get_feedback.html">Feedback</a></li>
         <li class="active"><a href="get_help.html">Get Help</a></li>
         <li><a href="#">about</a></li>
         <li><a href="#">Terms and conditions</a></li>
@@ -646,6 +646,7 @@ grid-template-columns: 1fr 1fr 1fr;
       <div class="cards-section">
         <!-- User Profile Card -->
         <div class="card1" style="grid-row: span 2;">
+        <a href="user_profile.html">
               <div class="card-content profile-section">
                 <div class="user-profile">
                   <img src="img/people.png" alt="User Profile">
@@ -654,6 +655,7 @@ grid-template-columns: 1fr 1fr 1fr;
                   John Doe
                 </div>
               </div>
+            </a>
               <div class="card-content button-section">
                 <button class="card-button">
                   <h4>Description 1</h4>
