--- a/chama/get_help.html
+++ b/chama/get_help.html
@@ -664,11 +664,11 @@ grid-template-columns: 1fr 1fr 1fr;
         <div class="user-name">John Doe</div>
       </div>
       <ul>
-        <li><a href="deposit.html">Dashboard</a></li>
-        <li><a href="#">Feedback</a></li>
-        <li class="active"><a href="get_help.html">Get Help</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">Terms and conditions</a></li>
+        <li><a href="deposit.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+  <li><a href="get_feedback.html"><i class="fas fa-comments"></i> Feedback</a></li>
+  <li class="active"><a href="get_help.html"><i class="fas fa-question-circle"></i> Get Help</a></li>
+  <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
+  <li><a href="#"><i class="fas fa-file-contract"></i> Terms and Conditions</a></li>
       </ul>
     </div>
 
