--- a/chama/details.html
+++ b/chama/details.html
@@ -246,11 +246,13 @@
         <div class="user-name">code cove</div>
       </div>
     <ul>
-      <li><a href="deposit.html">Dashboard</a></li>
-      <li><a href="#">Feedback</a></li>
-      <li><a href="#">Get help</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Terms and conditions</a></li>
+      <li><a href="deposit.html"><i class="fas fa-cog"></i> Settings</a></li>
+      <li><a href="#"><i class="fas fa-users"></i> Members</a></li>
+      <li><a href="deposit.html"><i class="fas fa-tachometer-alt"></i>Home</a></li>
+      <li><a href="get_feedback.html"><i class="fas fa-comments"></i> Feedback</a></li>
+      <li class="active"><a href="get_help.html"><i class="fas fa-question-circle"></i> Get Help</a></li>
+      <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
+      <li><a href="#"><i class="fas fa-file-contract"></i> Terms and Conditions</a></li>
     </ul>
    
   </div>
