--- a/chama/credentials.html
+++ b/chama/credentials.html
@@ -372,7 +372,7 @@
           <div class="user-profile">
             <img src="img/people.png" alt="User Profile" />
           </div>
-          <div class="user-name">John Doe</div>
+          <div class="user-name">Kezzy Ngotho</div>
         </div>
         <ul>
             <li><a href="deposit.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
@@ -394,7 +394,7 @@
               <!-- Profile name and member number -->
               <div class="user-profile">
                 <img src="img/people.png" alt="User Profile" />
-                <div class="user-name">John Doe</div>
+                <div class="user-name">Code cove</div>
               </div>
               <div class="member-number">Member Number: 123456</div>
             </div>
