--- a/chama/user_profile.html
+++ b/chama/user_profile.html
@@ -222,7 +222,7 @@
         justify-content: center; /* Center align the form fields */
        
         margin-right: 50px;
-        width: 700px; /* Increase the width of the form fields container */
+        width: 650px; /* Increase the width of the form fields container */
       }
       
       .card2 .form-row {
@@ -391,7 +391,7 @@
               <!-- Profile name and member number -->
               <div class="user-profile">
                 <img src="img/people.png" alt="User Profile" />
-                <div class="user-name">John Doe</div>
+                <div class="user-name">Code cove</div>
               </div>
               <div class="member-number">Member Number: 123456</div>
             </div>
@@ -419,7 +419,7 @@
   </div>
  <div class="section2">
     <div class="section2-content">
-      <h3 id="account">Account Credentials</h3>
+      <h3 id="account">Account Details</h3>
       <div class="form-fields-container">
         <div class="form-row">
           <div class="form-field">
