--- a/chama/chamas.html
+++ b/chama/chamas.html
@@ -239,16 +239,17 @@
           <a href="details.html" class="show-details-button">Show Details</a>
         </div>
       </div>
-      <div class="card">
-        <div class="upper-section">
-          <div class="chama-name">create new chama</div>
-          <div class="organization-logo">
-            <img src="img/add.png" alt="Organization Logo" />
+      <a href="create_chama.html" class="card-link">
+        <div class="card">
+          <div class="upper-section">
+            <div class="chama-name">Create New Chama</div>
+            <div class="organization-logo">
+              <img src="img/add.png" alt="Organization Logo" />
+            </div>
           </div>
         </div>
-       
-      </div>
-    </div>
+      </a>
+      
   </div>
 </div>
 
