--- a/chama/details.html
+++ b/chama/details.html
@@ -246,7 +246,7 @@
         <div class="user-name">code cove</div>
       </div>
     <ul>
-      <li><a href="deposit.html"><i class="fas fa-cog"></i> Settings</a></li>
+      <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
       <li><a href="#"><i class="fas fa-users"></i> Members</a></li>
       <li><a href="deposit.html"><i class="fas fa-tachometer-alt"></i>Home</a></li>
       <li><a href="get_feedback.html"><i class="fas fa-comments"></i> Feedback</a></li>
